# solana-test

./: .gitignore  Cargo.toml  README.md  justfile
.claude/: settings.local.json
crates/entry-comparator/: Cargo.toml
crates/entry-comparator/src/: config.rs  correlator.rs  diff_record.rs  leader_schedule.rs  lib.rs  main.rs  report.rs  runtime.rs  writer.rs
crates/entry-comparator/tests/: correlator_test.rs  writer_test.rs
crates/entry-sources/: Cargo.toml  build.rs
crates/entry-sources/src/: counters.rs  lib.rs  observation.rs  source.rs  yellowstone.rs
crates/entry-sources/src/shredstream/: deshred.rs  fec_tracker.rs  grpc.rs  mod.rs  udp_rx.rs
crates/entry-sources/tests/: yellowstone_smoke.rs
crates/fan-out-bench/: Cargo.toml  README.md  config.example.json
crates/fan-out-bench/docs/: smoke-runbook.md
crates/fan-out-bench/src/: attempt_state.rs  budget_watcher.rs  config.rs  counters.rs  dispatcher.rs  finality_tracker.rs  http_jsonrpc.rs  lib.rs  main.rs  match_event.rs  matcher.rs  memo.rs  merger.rs  observer.rs  outcome.rs  pool.rs  preparer.rs  rpc_fallback.rs  runtime.rs  schedule.rs  schedule_pump.rs  slot_hash_cache.rs  tip_accounts.rs  trigger.rs  trigger_id.rs  tx_builder.rs  wallet.rs
crates/fan-out-bench/src/nonce/: bootstrap.rs  geyser_sub.rs  manager.rs  mod.rs  rpc_poll.rs
crates/fan-out-bench/src/senders/: allenhark.rs  astralane.rs  blockrazor.rs  bloxroute.rs  helius.rs  jito.rs  jito_bundle.rs  mock.rs  mod.rs  nextblock.rs  nozomi.rs  slot0.rs  syncro.rs  triton.rs
crates/fan-out-bench/src/writer/: mod.rs  parquet_sink.rs  record.rs  schema.rs
crates/fan-out-bench/tests/: e2e_mock.rs  nonce_integration.rs  observer_integration.rs  pipeline_mock.rs
crates/solana-leader-map/: Cargo.toml  README.md  config.example.json
crates/solana-leader-map/src/: aggregate.rs  cache.rs  cli.rs  config.rs  domain.rs  lib.rs  main.rs  output.rs  solana_rpc.rs  validators_app.rs
crates/tick-trigger-bench/: Cargo.toml
crates/tick-trigger-bench/src/: config.rs  counters.rs  helius_sender.rs  leader_cache.rs  lib.rs  main.rs  observer.rs  preparer.rs  rpc_fallback.rs  run_meta.rs  runtime.rs  schedule.rs  sender.rs  sidecar.rs  tx_pool.rs  wallet.rs  writer.rs
crates/tick-trigger-fan-out-bench/: Cargo.toml  README.md  build.rs  config.example.json
crates/tick-trigger-fan-out-bench/src/: blockhash_cache.rs  config.rs  lib.rs  merger.rs  ordering.rs  phase1_metrics.rs  poh_supervisor.rs  preparer.rs  recorder.rs  schedule.rs  tip_accounts.rs  trigger_engine.rs  tx_builder.rs  tx_pool.rs  wallet.rs
crates/tick-trigger-fan-out-bench/src/nonce/: bootstrap.rs  local_compute.rs  manager.rs  mod.rs  rpc_fallback.rs  state.rs
crates/tick-trigger-fan-out-bench/src/senders/: helius.rs  jito.rs  mod.rs  triton.rs
crates/tick-trigger-fan-out-bench/src/senders/jito/: auth.rs  grpc.rs  json_rpc.rs  mod.rs  tip_updater.rs
crates/tick-trigger-fan-out-bench/src/senders/jito/proto/: auth.proto  bundle.proto  packet.proto  searcher.proto  shared.proto
crates/tx-cutoff/: Cargo.toml  README.md  config.example.json
crates/tx-cutoff/src/: engine.rs  lib.rs  main.rs  preflight.rs  swap.rs  time.rs  tracker.rs
crates/tx-cutoff/tests/: config_test.rs  rpc_test.rs  time_test.rs  tracker_test.rs  wallet_test.rs
docs/superpowers/: handoff-2026-05-20.md
docs/superpowers/plans/: 2026-04-22-tx-cutoff.md  2026-05-14-fan-out-bench-01-foundation.md  2026-05-14-fan-out-bench-02-nonce.md  2026-05-14-fan-out-bench-03-observer.md  2026-05-14-fan-out-bench-04-pipeline.md  2026-05-14-fan-out-bench-05-realchain.md  2026-05-14-fan-out-bench-06-rest-senders.md  2026-05-14-fan-out-bench-07-final.md  2026-05-22-jito-sender-bundle-redesign.md  2026-05-29-triton-sender.md
docs/superpowers/runbooks/: 2026-05-11-entry-comparator-runbook.md
docs/superpowers/specs/: 2026-04-22-tx-inclusion-cutoff-design.md  2026-05-14-fan-out-bench-design.md  2026-05-22-jito-sender-bundle-redesign.md  2026-05-29-triton-sender-design.md
src/: config.rs  engine.rs  lib.rs  main.rs  preflight.rs  report.rs  rpc.rs  scheduler.rs  swap.rs  tracker.rs  wallet.rs
tests/: engine_test.rs  preflight_test.rs  report_test.rs  scheduler_test.rs  swap_test.rs
