[package]
name = "tx-cutoff"
version = "0.1.0"
edition = "2024"
description = "Transaction inclusion cutoff measurement tool for EVM chains"
license = "MIT"

[dependencies]
alloy = { version = "1", features = [
    "providers",
    "provider-ws",
    "signer-local",
    "contract",
    "rpc-types",
    "consensus",
    "network",
    "transport-http",
] }
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "time",
    "sync",
    "signal",
    "io-util",
    "net",
    "fs",
] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
core_affinity = "0.8"
hdrhistogram = "7"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
pretty_assertions = "1"
tempfile = "3"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
