[workspace]
resolver = "2"
members = [
    "crates/tx-cutoff",
    "crates/solana-leader-map",
    "crates/entry-sources",
    "crates/entry-comparator",
    "crates/tick-trigger-bench",
    "crates/fan-out-bench",
    "crates/tick-trigger-fan-out-bench",
]

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
# shared deps used by multiple crates — pin at workspace level for consistency
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "time",
    "sync",
    "signal",
    "io-util",
    "net",
    "fs",
] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
chrono = { version = "0.4", features = ["serde"] }
yellowstone-grpc-client = "12.2"
yellowstone-grpc-proto = { version = "12.1", default-features = false }
solana-sdk = "3.0"
solana-ledger = { version = "3.0", features = ["agave-unstable-api"] }
solana-entry = "3.0"
solana-clock = "3.0"
solana-client = "3.1"
crossbeam-channel = "0.5"
core_affinity = "0.8"
mimalloc = { version = "0.1", default-features = false }
bincode = "1.3"
wincode = { version = "0.1.2", features = ["derive", "solana-short-vec"] }
arrow = "55"
arrow-array = "55"
arrow-schema = "55"
parquet = { version = "55", default-features = false, features = ["arrow", "zstd"] }
hdrhistogram = "7"
smallvec = { version = "1", features = ["const_generics"] }
dashmap = "6"
rand = "0.8"
arc-swap = "1"
bs58 = "0.5"
humantime = "2"
hostname = "0.4"
socket2 = "0.5"
futures-util = "0.3"
tonic = "0.12"
prost = "0.13"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
