[package]
name = "entry-comparator"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Step 0 — compare Yellowstone gRPC vs Jito ShredStream entry latency"

[dependencies]
entry-sources = { path = "../entry-sources" }
tokio.workspace = true
crossbeam-channel.workspace = true
core_affinity.workspace = true
clap = { version = "4", features = ["derive", "env"] }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
mimalloc.workspace = true
arrow.workspace = true
arrow-array.workspace = true
arrow-schema.workspace = true
parquet.workspace = true
hdrhistogram.workspace = true
smallvec.workspace = true
solana-sdk.workspace = true
solana-client.workspace = true
humantime = "2"
arc-swap = "1"
bs58 = "0.5"
hostname = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
pretty_assertions = "1"
tempfile = "3"
