[package]
name = "entry-sources"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Reusable Solana entry observation sources (Yellowstone gRPC + Jito ShredStream)"

[dependencies]
tokio.workspace = true
crossbeam-channel.workspace = true
core_affinity.workspace = true
yellowstone-grpc-client.workspace = true
yellowstone-grpc-proto.workspace = true
solana-sdk.workspace = true
solana-ledger.workspace = true
solana-entry.workspace = true
solana-clock.workspace = true
smallvec.workspace = true
socket2.workspace = true
tonic.workspace = true
prost.workspace = true
futures-util.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
bincode.workspace = true
wincode.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
pretty_assertions = "1"
