[package]
name = "fan-out-bench"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Etap 1 — fan-out multi-sender Solana tx send benchmark with durable nonce dedup"

[dependencies]
entry-sources = { path = "../entry-sources" }
tokio.workspace = true
crossbeam-channel.workspace = true
core_affinity.workspace = true
clap = { version = "4", features = ["derive", "env"] }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
mimalloc.workspace = true
arrow.workspace = true
arrow-array.workspace = true
arrow-schema.workspace = true
parquet.workspace = true
smallvec.workspace = true
solana-sdk.workspace = true
solana-client.workspace = true
solana-commitment-config = "3.1"
solana-compute-budget-interface = "3.0"
solana-system-interface = "3.2"
dashmap.workspace = true
rand.workspace = true
arc-swap.workspace = true
bs58.workspace = true
humantime.workspace = true
hostname.workspace = true
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
bincode.workspace = true
base64 = "0.22"
futures-util.workspace = true
yellowstone-grpc-client.workspace = true
yellowstone-grpc-proto.workspace = true
sha2 = "0.10"
hex = "0.4"
async-trait = "0.1"
parking_lot = "0.12"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
pretty_assertions = "1"
tempfile = "3"
