[package]
name = "solana-leader-map"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Build a per-epoch map of Solana validators -> geographic location and aggregate leader-schedule slot distribution by country/data-center"

[dependencies]
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
comfy-table = "7"
indicatif = "0.17"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
pretty_assertions = "1"
tempfile = "3"
