[package]
name = "tx-cutoff"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Transaction inclusion cutoff measurement tool for EVM chains"

[dependencies]
alloy = { version = "1", features = [
    "providers",
    "provider-ws",
    "signer-local",
    "contract",
    "rpc-types",
    "consensus",
    "network",
    "transport-http",
] }
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
core_affinity = "0.8"
hdrhistogram = "7"
futures-util = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
pretty_assertions = "1"
tempfile = "3"
